<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.victor.fastru.ShopActivity"
    android:background="@color/uftmPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/escolha_sua_op_o_de_compra"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/switch_thumb_material_dark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="30dp" />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/estudante"
        android:id="@+id/button_shop1"
        android:textSize="20sp"
        android:textColor="@color/uftmPrimaryDark"
        android:background="@drawable/rounded_button"
        android:onClick="onIniciarClick"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/comum"
        android:id="@+id/button_shop2"
        android:textSize="20sp"
        android:textColor="@color/uftmPrimaryDark"
        android:background="@drawable/rounded_button"
        android:onClick="onIniciarClick"
        android:layout_below="@+id/button_shop1"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
